# Multi_Object_Tracking_ROS

./: CMakeLists.txt  README.md  package.xml
include/object_tracking_ros/: hungarian_algorithm.hpp  kalman_filter.hpp  multi_object_tracker.hpp  track.hpp  track_manager.hpp
launch/: object_tracking.launch
src/: hungarian_algorithm.cpp  kalman_filter.cpp  main.cpp  multi_object_tracker.cpp  object_tracking_node.cpp  track.cpp  track_manager.cpp
